k8s/charts/k8s/services/traefik/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      hostname: traefik
      containers:
        - name: traefik
          image: traefik:latest
          command: 
            - "/usr/local/bin/traefik"
            - "--configFile=/config/traefik.yaml"
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: dashboard
              containerPort: 8080
          volumeMounts:
            - name: tailscale-sock
              mountPath: /var/run/tailscale/tailscaled.sock
            - name: certs
              mountPath: /certs
            - name: config
              mountPath: /config
            - name: etc-traefik
              mountPath: /etc/traefik
            - name: plugins-local
              mountPath: /plugins-local
            - name: docker-sock
              mountPath: /var/run/docker.sock
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: tailscale-sock
          hostPath:
            path: /var/run/tailscale/tailscaled.sock
            type: Socket
        - name: certs
          hostPath:
            path: /home/brunner56/my-media-stack/certs
            type: Directory
        - name: config
          hostPath:
            path: /home/brunner56/my-media-stack/configs/traefik/config
            type: Directory
        - name: etc-traefik
          hostPath:
            path: /home/brunner56/my-media-stack/configs/traefik/etc/traefik
            type: Directory
        - name: plugins-local
          hostPath:
            path: /home/brunner56/my-media-stack/configs/traefik/plugins-local
            type: Directory
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
