k8s/charts/k8s/services/traefik/05-traefik-error-pages.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-error-pages
  labels:
    app: traefik-error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-error-pages
  template:
    metadata:
      labels:
        app: traefik-error-pages
    spec:
      hostname: error-pages
      containers:
        - name: traefik-error-pages
          image: httpd:alpine
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: error-pages
              mountPath: /usr/local/apache2/htdocs/
              readOnly: true
      volumes:
        - name: error-pages
          hostPath:
            path: /home/brunner56/my-media-stack/configs/traefik/error-pages
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-error-pages
  labels:
    app: traefik-error-pages
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: traefik-error-pages
